crates/lexer/src/lexer/snapshots/lexer__lexer__tests__block_comment.snap
---
source: crates/lexer/src/lexer/tests.rs
snapshot_kind: text
---
Ok(
    [
        Lexed {
            kind: Token(
                BLOCK_COMMENT,
            ),
            offset: 0,
        },
        Lexed {
            kind: Token(
                WHITESPACE,
            ),
            offset: 23,
        },
        Lexed {
            kind: Token(
                BLOCK_COMMENT,
            ),
            offset: 24,
        },
        Lexed {
            kind: Token(
                END_OF_FILE,
            ),
            offset: 59,
        },
    ],
)
