crates/lexer/src/lexer/snapshots/lexer__lexer__tests__bracket.snap
---
source: crates/lexer/src/lexer/tests.rs
snapshot_kind: text
---
Ok(
    [
        Lexed {
            kind: Token(
                LEFT_PARENTHESIS,
            ),
            offset: 0,
        },
        Lexed {
            kind: Token(
                RIGHT_PARENTHESIS,
            ),
            offset: 1,
        },
        Lexed {
            kind: Token(
                LEFT_SQUARE,
            ),
            offset: 2,
        },
        Lexed {
            kind: Token(
                RIGHT_SQUARE,
            ),
            offset: 3,
        },
        Lexed {
            kind: Token(
                LEFT_CURLY,
            ),
            offset: 4,
        },
        Lexed {
            kind: Token(
                RIGHT_CURLY,
            ),
            offset: 5,
        },
        Lexed {
            kind: Token(
                END_OF_FILE,
            ),
            offset: 6,
        },
    ],
)
