crates/lexer/src/lexer/snapshots/lexer__lexer__tests__character.snap
---
source: crates/lexer/src/lexer/tests.rs
snapshot_kind: text
---
Ok(
    [
        Lexed {
            kind: Token(
                CHAR,
            ),
            offset: 0,
        },
        Lexed {
            kind: Token(
                END_OF_FILE,
            ),
            offset: 3,
        },
    ],
)
