crates/lexer/src/lexer/snapshots/lexer__lexer__tests__character_escape.snap
---
source: crates/lexer/src/lexer/tests.rs
snapshot_kind: text
---
Ok(
    [
        Lexed {
            kind: CHAR,
            offset: 0,
        },
        Lexed {
            kind: WHITESPACE,
            offset: 4,
        },
        Lexed {
            kind: CHAR,
            offset: 5,
        },
        Lexed {
            kind: WHITESPACE,
            offset: 9,
        },
        Lexed {
            kind: CHAR,
            offset: 10,
        },
        Lexed {
            kind: WHITESPACE,
            offset: 14,
        },
        Lexed {
            kind: CHAR,
            offset: 15,
        },
        Lexed {
            kind: WHITESPACE,
            offset: 19,
        },
        Lexed {
            kind: CHAR,
            offset: 20,
        },
        Lexed {
            kind: WHITESPACE,
            offset: 24,
        },
        Lexed {
            kind: CHAR,
            offset: 25,
        },
        Lexed {
            kind: WHITESPACE,
            offset: 29,
        },
        Lexed {
            kind: CHAR,
            offset: 30,
        },
        Lexed {
            kind: END_OF_FILE,
            offset: 36,
        },
    ],
)
