crates/lexer/src/lexer/snapshots/lexer__lexer__tests__end_of_file.snap
---
source: crates/lexer/src/lexer/tests.rs
snapshot_kind: text
---
Ok(
    [
        Lexed {
            kind: Token(
                END_OF_FILE,
            ),
            offset: 0,
        },
    ],
)
