crates/lexer/src/lexer/snapshots/lexer__lexer__tests__integer_underscores.snap
---
source: crates/lexer/src/lexer/tests.rs
snapshot_kind: text
---
Ok(
    [
        Lexed {
            kind: Token(
                INTEGER,
            ),
            range: 0..9,
        },
        Lexed {
            kind: Token(
                END_OF_FILE,
            ),
            range: 9..9,
        },
    ],
)
