crates/lexer/src/lexer/snapshots/lexer__lexer__tests__number.snap
---
source: crates/lexer/src/lexer/tests.rs
snapshot_kind: text
---
Ok(
    [
        Lexed {
            kind: Token(
                NUMBER,
            ),
            offset: 0,
        },
        Lexed {
            kind: Token(
                END_OF_FILE,
            ),
            offset: 4,
        },
    ],
)
